--- a/sass/gutenberg/formatting/_align.scss
+++ b/sass/gutenberg/formatting/_align.scss
@@ -3,16 +3,30 @@
 .gutenberg-content {
   .alignleft > * {
     float: left;
-    margin-bottom: var(--margin-between-paragraphs);
-    margin-right: var(--padding-container-horizontal);
-    margin-top: var(--margin-between-paragraphs);
   }
 
   .alignright > * {
     float: right;
+  }
+
+  .alignleft > img {
+    margin-bottom: var(--margin-between-paragraphs);
+    margin-right: var(--padding-container-horizontal);
+    margin-top: var(--margin-between-paragraphs);
+
+    + figcaption {
+      margin-top: 0;
+    }
+  }
+
+  .alignright > img {
     margin-bottom: var(--margin-between-paragraphs);
     margin-left: var(--padding-container-horizontal);
     margin-top: var(--margin-between-paragraphs);
+
+    + figcaption {
+      margin-top: 0;
+    }
   }
 
   .alignwide {
